fix side panel spacing

--- a/src/components/form/SidePanelFormButtons.module.scss
+++ b/src/components/form/SidePanelFormButtons.module.scss
@@ -4,7 +4,6 @@
 .buttons {
   background-color: $colors--theme--background-default;
   border-top: 1px solid $colors--theme--border-default;
-  bottom: 0;
   display: flex;
   margin-bottom: -3 * $sp-unit;
   margin-top: $spv--x-large;
